tests/error/error13.correct
class 'A' declared to extend unknown class 'B'
